crates/gapura-core/tests/snapshots/golden__addressed-gateway-two-listeners.snap
---
source: crates/gapura-core/tests/golden.rs
expression: t
---
config:
  listeners:
    - id: infra/gw/a
      port: 10000
      client_port: 80
      protocol: Http
      hostname: a.example.com
      tls: ~
      rules:
        - route: apps/to-a
          rule_index: 0
          creation_timestamp: "2026-09-01T10:00:00Z"
          matches:
            - path:
                Prefix: /
              headers: []
              query: []
              method: ~
          filters:
            request_headers:
              set: []
              add: []
              remove: []
            response_headers:
              set: []
              add: []
              remove: []
            redirect: ~
            rewrite: ~
            mirror: ~
          backends:
            - cluster: "apps/echo:80"
              weight: 1
          timeouts:
            request_ms: ~
            backend_request_ms: ~
    - id: infra/gw/b
      port: 10000
      client_port: 80
      protocol: Http
      hostname: b.example.com
      tls: ~
      rules:
        - route: apps/to-b
          rule_index: 0
          creation_timestamp: "2026-09-01T10:00:00Z"
          matches:
            - path:
                Prefix: /
              headers: []
              query: []
              method: ~
          filters:
            request_headers:
              set: []
              add: []
              remove: []
            response_headers:
              set: []
              add: []
              remove: []
            redirect: ~
            rewrite: ~
            mirror: ~
          backends:
            - cluster: "apps/echo:80"
              weight: 1
          timeouts:
            request_ms: ~
            backend_request_ms: ~
  ports:
    10000:
      - listener: 0
        hostname: a.example.com
        matcher:
          path:
            Prefix: /
          headers: []
          query: []
          method: ~
        rule: 0
      - listener: 1
        hostname: b.example.com
        matcher:
          path:
            Prefix: /
          headers: []
          query: []
          method: ~
        rule: 0
  clusters:
    "apps/echo:80":
      endpoints:
        - address: 10.1.0.5
          port: 8080
      tls: ~
status:
  - kind: GatewayClass
    name: gapura
    conditions:
      - type: Accepted
        status: "True"
        reason: Accepted
        message: Handled by Gapura
        observedGeneration: 1
    supportedFeatures:
      - Gateway
      - HTTPRoute
      - HTTPRoute303RedirectStatusCode
      - HTTPRoute307RedirectStatusCode
      - HTTPRoute308RedirectStatusCode
      - HTTPRouteRequestMirror
      - PathMatchRegularExpression
      - ReferenceGrant
  - kind: Gateway
    namespace: infra
    name: gw
    addresses:
      - 203.0.113.9
    conditions:
      - type: Accepted
        status: "True"
        reason: Accepted
        message: Gateway is accepted
        observedGeneration: 1
      - type: Programmed
        status: "True"
        reason: Programmed
        message: Gateway is programmed
        observedGeneration: 1
    listeners:
      - name: a
        supportedKinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
        attachedRoutes: 1
        conditions:
          - type: Accepted
            status: "True"
            reason: Accepted
            message: Listener is accepted
            observedGeneration: 1
          - type: Programmed
            status: "True"
            reason: Programmed
            message: "Listener is programmed on port 10000: declared port 80 is shared and this Gateway is individually addressed, so its Service must target port 10000"
            observedGeneration: 1
          - type: ResolvedRefs
            status: "True"
            reason: ResolvedRefs
            message: All references resolved
            observedGeneration: 1
          - type: Conflicted
            status: "False"
            reason: NoConflicts
            message: No conflicts
            observedGeneration: 1
      - name: b
        supportedKinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
        attachedRoutes: 1
        conditions:
          - type: Accepted
            status: "True"
            reason: Accepted
            message: Listener is accepted
            observedGeneration: 1
          - type: Programmed
            status: "True"
            reason: Programmed
            message: "Listener is programmed on port 10000: declared port 80 is shared and this Gateway is individually addressed, so its Service must target port 10000"
            observedGeneration: 1
          - type: ResolvedRefs
            status: "True"
            reason: ResolvedRefs
            message: All references resolved
            observedGeneration: 1
          - type: Conflicted
            status: "False"
            reason: NoConflicts
            message: No conflicts
            observedGeneration: 1
  - kind: HTTPRoute
    namespace: apps
    name: to-a
    parents:
      - parentRef:
          group: ~
          kind: ~
          namespace: infra
          name: gw
          sectionName: ~
          port: ~
        controllerName: gapura.dev/controller
        conditions:
          - type: Accepted
            status: "True"
            reason: Accepted
            message: Route is accepted
            observedGeneration: 1
          - type: ResolvedRefs
            status: "True"
            reason: ResolvedRefs
            message: All references resolved
            observedGeneration: 1
  - kind: HTTPRoute
    namespace: apps
    name: to-b
    parents:
      - parentRef:
          group: ~
          kind: ~
          namespace: infra
          name: gw
          sectionName: ~
          port: ~
        controllerName: gapura.dev/controller
        conditions:
          - type: Accepted
            status: "True"
            reason: Accepted
            message: Route is accepted
            observedGeneration: 1
          - type: ResolvedRefs
            status: "True"
            reason: ResolvedRefs
            message: All references resolved
            observedGeneration: 1
