crates/gapura-core/tests/snapshots/golden__allowed-kinds-invalid.snap
---
source: crates/gapura-core/tests/golden.rs
expression: t
---
config:
  listeners: []
  clusters: {}
status:
  - kind: GatewayClass
    name: gapura
    conditions:
      - type: Accepted
        status: "True"
        reason: Accepted
        message: Handled by Gapura
        observedGeneration: 1
    supportedFeatures:
      - Gateway
      - HTTPRoute
      - ReferenceGrant
  - kind: Gateway
    namespace: infra
    name: main
    addresses:
      - 10.0.0.1
    conditions:
      - type: Accepted
        status: "False"
        reason: ListenersNotValid
        message: No listener is valid
        observedGeneration: 1
      - type: Programmed
        status: "False"
        reason: Invalid
        message: No listener is programmed
        observedGeneration: 1
    listeners:
      - name: tcp-only
        supportedKinds: []
        attachedRoutes: 0
        conditions:
          - type: Accepted
            status: "True"
            reason: Accepted
            message: Listener is accepted
            observedGeneration: 1
          - type: Programmed
            status: "False"
            reason: Invalid
            message: Listener is not valid
            observedGeneration: 1
          - type: ResolvedRefs
            status: "False"
            reason: InvalidRouteKinds
            message: only HTTPRoute is supported in allowedRoutes.kinds
            observedGeneration: 1
          - type: Conflicted
            status: "False"
            reason: NoConflicts
            message: No conflicts
            observedGeneration: 1
